# qt-calculator

./: 404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
gui/pages/: pages.ui  ui_pages.py
gui/widgets/: py_push_button.py
gui/windows/main_window/: ui_main_window.py
qt_calculator/: main.py  qt_core.py
qt_calculator/gui/pages/: pages.ui  ui_pages.py
qt_calculator/gui/windows/main_window/: ui_main_window.py
search/: search_index.json
