[tool.poetry]
name = "qt-calculator"
version = "0.1.0"
description = "GUI for calculator using Python and PyQT6"
authors = ["Edson Pimenta <edson.tibo@gmail.com>"]
readme = "README.md"
packages = [{include = "qt_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.3.1"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.3.1"
pytest = "^7.1.3"
blue = "^0.9.1"
isort = "^5.10.1"
mkdocs = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
